Fix layout shift bugs, hide scroll on load

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -50,6 +50,7 @@ screen {
         justify-content: center;
         margin: 0 auto;
         padding-top: 1in;
+        padding-bottom: 1in;
     }
 }
 
